<resources>
    <string name="app_name">PetMatch</string>
    <string name="welcome_message">Hola,😊 %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_mascota">Registrar Mascota</string>
    <string name="nombre_agregar">Nombre :</string>
    <string name="raza_agregar">Raza :</string>
    <string name="color_agregar">Color :</string>
    <string name="edad_a_os_agregar">Edad(años) :</string>
    <string name="seleccionar_imagen_agregar">Seleccionar Imagen</string>
    <string name="estado_agregar">Estado :</string>
    <string name="adopcion_agregar">Adopcion</string>
    <string name="sexo_agregar">Sexo :</string>
    <string name="tama_o_agregar">Tamaño :</string>
    <string name="tipo_agregar">Tipo :</string>
    <string name="guardar_mascota_agregar">Guardar Mascota</string>
    <string name="contactard_detalle">Contactar</string>
    <string name="nombre_detalle">Nombre</string>
    <string name="raza_detalle_hin">Raza :</string>
    <string name="raza_detalle">Raza</string>
    <string name="color_detalle_hit">Color :</string>
    <string name="color_detalle">Color</string>
    <string name="a_os_detalle_hin">Años :</string>
    <string name="edad_detalle_lbla">Edad</string>
    <string name="tipo_detalle_asd">Tipo</string>
    <string name="tama_o_detalle_hinas">Tamaño</string>
    <string name="ubicacion_detalle_asdfg">Ubicacion</string>
    <string name="eviar_solicitud_detalle_hasd">Eviar Solicitud</string>
    <string name="cambiar_contrase_a_editpass">Cambiar Contraseña</string>
    <string name="contrase_a_actual_editpass">Contraseña Actual :</string>
    <string name="contrase_a_nueva_editpass_asd">Contraseña Nueva :</string>
    <string name="mascotas_en_adopci_n_listar">Mascotas en Adopción</string>
    <string name="buscar_listar_asdg">Buscar</string>
    <string name="cerca_tuyo_listar_qws">Cerca tuyo</string>
    <string name="visitados_listar_nrd">+ Visitados</string>
    <string name="peque_o_listar_asfv">Pequeño</string>
    <string name="grande_listar_cxvw">Grande</string>
    <string name="macho_listar_nds">Macho</string>
    <string name="hembra_listar_ascz">Hembra</string>
    <string name="favoritos_favoritos_sacv">Favoritos ❤️</string>
    <string name="actualizar_publicaci_n_editpublic">Actualizar Publicación</string>
    <string name="nombre_editpublic_asd">Nombre :</string>
    <string name="raza_editpublic_bxc">Raza :</string>
    <string name="color_editpublic_qw">Color :</string>
    <string name="edad_a_os_editpublic_mkdf">Edad(años) :</string>
    <string name="seleccionar_imagen_editpublic_tew">Seleccionar Imagen</string>
    <string name="estado_editpublic_qcx">Estado :</string>
    <string name="sexo_editpublic_wex">Sexo :</string>
    <string name="tama_o_editpublic_842">Tamaño :</string>
    <string name="tipo_editpublic_xcv">Tipo :</string>
    <string name="eliminar_editpublic_csw">Eliminar</string>
    <string name="actualizar_editpublic_zhys">Actualizar</string>
    <string name="username_main_a">Username</string>
    <string name="password_main_a">Password</string>
    <string name="ingresar_main_a">Ingresar</string>
    <string name="registrarse_main_a">Registrarse</string>
    <string name="datos_personales_perfil_r">Datos Personales</string>
    <string name="usuario_perfil_rga">Usuario :</string>
    <string name="nombre_perfil_riyu">Nombre :</string>
    <string name="apellido_perfil_rqt">Apellido :</string>
    <string name="celular_perfil_riuip">Celular :</string>
    <string name="e_mail_perfil_rtc">E-mail :</string>
    <string name="direcci_n_perfil_rqz">Dirección :</string>
    <string name="contrase_a_perfil_vcxnb">Contraseña :</string>
    <string name="guardar_perfil_asd">guardar</string>
    <string name="mis_publicaciones_perfil_qs">Mis Publicaciones</string>
    <string name="mis_publicaciones_publicmt_qe">Mis Publicaciones</string>
    <string name="registrarse_sigin_asd">Registrarse</string>
    <string name="usuario_sigin_awe">Usuario :</string>
    <string name="e_mail_sigin_asdr">E-mail :</string>
    <string name="contrase_a_sigin_asdaq">Contraseña :</string>
    <string name="celular_sigin_asd1">Celular :</string>
    <string name="registrarse_sigin_asda">Registrarse</string>
    <string name="_1_layout_mascota_asd">1</string>
    <string name="en_adopci_n_layout_mascota_asf">En Adopción</string>
    <string name="nombre_layout_mascota_zxc">Nombre</string>
    <string name="raza_layout_mascota_azx">Raza</string>
    <string name="nombre_mascota_publi_1q2">Nombre</string>
    <string name="raza_mascota_publi_asxz">Raza :</string>
    <string name="raza_mascota_publi_qz">Raza</string>
    <string name="estado_mascota_publi_qZ">Estado :</string>
    <string name="estado_mascota_publi_jf">Estado</string>
    <string name="sexo_mascota_publi_vn">Sexo :</string>
    <string name="sexo_mascota_publi_aqc">Sexo</string>
</resources>