<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_publi_mascota"
        android:layout_width="135sp"
        android:layout_height="120sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15sp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/roundedShapeView"
        />

    <TextView
        android:id="@+id/tv_publi_nombre"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/nombre_mascota_publi_1q2"
        android:textFontWeight="100"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/img_publi_mascota"
        app:layout_constraintTop_toTopOf="@id/img_publi_mascota"
        />
    <TextView
        android:id="@+id/lbl_publi_raza"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/raza_mascota_publi_asxz"
        android:textFontWeight="100"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/img_publi_mascota"
        app:layout_constraintTop_toBottomOf="@+id/tv_publi_nombre"
        android:layout_marginTop="5sp"
        />
        <TextView
            android:id="@+id/tv_publi_raza"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/raza_mascota_publi_qz"
            android:textFontWeight="100"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_publi_estado"
            app:layout_constraintTop_toBottomOf="@+id/tv_publi_nombre"
            android:layout_marginTop="5sp"
            />
        <TextView
            android:id="@+id/lbl_publi_estado"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/estado_mascota_publi_qZ"
            android:textFontWeight="100"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/img_publi_mascota"
            app:layout_constraintTop_toBottomOf="@+id/tv_publi_raza"
            android:layout_marginTop="5sp"
            />
        <TextView
            android:id="@+id/tv_publi_estado"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/estado_mascota_publi_jf"
            android:textFontWeight="100"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/lbl_publi_estado"
            app:layout_constraintTop_toBottomOf="@+id/tv_publi_raza"
            android:layout_marginTop="5sp"
            />
        <TextView
            android:id="@+id/lbl_publi_sexo"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sexo_mascota_publi_vn"
            android:textFontWeight="100"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/img_publi_mascota"
            app:layout_constraintTop_toBottomOf="@+id/lbl_publi_estado"
            android:layout_marginTop="5sp"
            />
        <TextView
            android:id="@+id/tv_publi_sexo"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/sexo_mascota_publi_aqc"
            android:textFontWeight="100"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/lbl_publi_estado"
            app:layout_constraintTop_toBottomOf="@+id/lbl_publi_estado"
            android:layout_marginTop="5sp"
            />

        <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_publi_mascota"
        android:layout_marginTop="15sp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>