<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_detalleMascota"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_details_main"
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:background="@color/violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        />
    <ImageView
        android:id="@+id/img_details_back"
        android:layout_width="70sp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20sp"
        android:src="@drawable/back"
        android:alpha="0.7"

        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_details_info"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="380sp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="@+id/img_details_main"
        app:shapeAppearanceOverlay="@style/roundedImageView"

        />
    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/mbtn_details_contacto"
        android:layout_width="160sp"
        android:layout_height="45sp"
        app:layout_constraintTop_toTopOf="@+id/img_details_info"
        app:layout_constraintEnd_toEndOf="@+id/img_details_info"
        android:layout_marginEnd="40sp"
        android:text="@string/contactard_detalle"
        android:textSize="17sp"
        android:background="@drawable/btn_contacto"
        android:fontFamily="@font/nunito_extrabold"
        android:layout_marginTop="-20sp"
        android:textColor="@color/graydark"
        android:drawableRight="@drawable/whatsapp"
        android:padding="50sp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/img_details_info"
        app:layout_constraintStart_toStartOf="@+id/img_details_info"
        app:layout_constraintEnd_toEndOf="@+id/img_details_info"
        android:layout_marginStart="35sp"
        android:layout_marginEnd="35sp"
        android:layout_marginTop="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_detalle"
            android:textSize="40sp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />
        <ImageView
            android:id="@+id/img_details_sex"
            android:layout_width="60sp"
            android:layout_height="60sp"
            app:layout_constraintStart_toEndOf="@+id/lbl_details_nombre"
            app:layout_constraintTop_toTopOf="@+id/lbl_details_nombre"
            android:layout_marginStart="20sp"
            />
        <TextView
            android:id="@+id/hin_details_raza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raza_detalle_hin"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintTop_toBottomOf="@+id/lbl_details_nombre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="130sp"
            />

        <TextView
            android:id="@+id/lbl_details_raza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raza_detalle"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_bold"
            app:layout_constraintTop_toBottomOf="@+id/lbl_details_nombre"
            app:layout_constraintStart_toEndOf="@+id/hin_details_raza"
            android:layout_marginTop="130sp"
            android:layout_marginStart="15sp"
            />
        <TextView
            android:id="@+id/hin_details_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_detalle_hit"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintTop_toBottomOf="@+id/lbl_details_raza"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/lbl_details_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_detalle"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_bold"
            app:layout_constraintTop_toBottomOf="@+id/lbl_details_raza"
            app:layout_constraintStart_toStartOf="@+id/lbl_details_raza"

            />
        <TextView
            android:id="@+id/hin_details_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_os_detalle_hin"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintTop_toBottomOf="@+id/lbl_details_color"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/lbl_details_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad_detalle_lbla"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_bold"
            app:layout_constraintTop_toBottomOf="@+id/lbl_details_color"
            app:layout_constraintStart_toStartOf="@+id/lbl_details_raza"

            />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_details_info_type"
            android:layout_width="140sp"
            android:layout_height="100sp"
            android:background="@color/grayligth2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/roundedTypeView"
            android:layout_marginTop="70sp"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_details_info_size"
            android:layout_width="140sp"
            android:layout_height="100sp"
            android:background="@color/grayligth2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/roundedTypeView"
            android:layout_marginTop="70sp"
            android:layout_marginStart="15sp"
            />
        <TextView
            android:id="@+id/lbl_details_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_detalle_asd"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintBottom_toBottomOf="@+id/img_details_info_type"
            app:layout_constraintStart_toStartOf="@+id/img_details_info_type"
            app:layout_constraintEnd_toEndOf="@+id/img_details_info_type"
            android:layout_marginBottom="5sp"
            />
        <ImageView
            android:id="@+id/img_details_tipo"
            android:layout_width="60sp"
            android:layout_height="60sp"
            app:layout_constraintTop_toTopOf="@+id/img_details_info_type"
            app:layout_constraintStart_toStartOf="@+id/img_details_info_type"
            app:layout_constraintEnd_toEndOf="@+id/img_details_info_type"
            android:layout_marginTop="10sp"
            />
        <TextView
            android:id="@+id/lbl_details_tamaño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tama_o_detalle_hinas"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintBottom_toBottomOf="@+id/img_details_info_size"
            app:layout_constraintStart_toStartOf="@+id/img_details_info_size"
            app:layout_constraintEnd_toEndOf="@+id/img_details_info_size"
            android:layout_marginBottom="5sp"
            />
        <ImageView
            android:id="@+id/img_details_tamaño"
            android:layout_width="60sp"
            android:layout_height="60sp"
            app:layout_constraintTop_toTopOf="@+id/img_details_info_size"
            app:layout_constraintStart_toStartOf="@+id/img_details_info_size"
            app:layout_constraintEnd_toEndOf="@+id/img_details_info_size"
            android:layout_marginTop="10sp"
            />
        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/mbtn_ubicacion"
            android:layout_width="140sp"
            android:layout_height="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/nunito_extrabold"
            android:background="@drawable/btn_ubicacion"
            android:text="@string/ubicacion_detalle_asdfg"
            android:textColor="@color/grayligth2"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <fragment
        android:id="@+id/frag_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        app:layout_constraintStart_toStartOf="@+id/cl_details_container"
        app:layout_constraintTop_toBottomOf="@+id/cl_details_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="20sp"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        />
    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/mbtn_solicitud"
        android:layout_width="170sp"
        android:layout_height="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_map"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/nunito_extrabold"
        android:background="@drawable/btn_contacto"
        android:text="@string/eviar_solicitud_detalle_hasd"
        android:textColor="@color/black"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="15sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>